API仕様を拡充
